kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: CELERY_BACKEND
              valueFrom:
                configMapKeyRef:
                  key: CELERY_BACKEND
                  name: aaos-dev
            - name: CELERY_BROKER
              valueFrom:
                configMapKeyRef:
                  key: CELERY_BROKER
                  name: aaos-dev
            - name: DJANGO_ALLOWED_HOSTS
              valueFrom:
                configMapKeyRef:
                  key: DJANGO_ALLOWED_HOSTS
                  name: aaos-dev
            - name: ELASTIC_APM_DEBUG
              valueFrom:
                configMapKeyRef:
                  key: ELASTIC_APM_DEBUG
                  name: aaos-dev
            - name: ELASTIC_APM_LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: ELASTIC_APM_LOG_LEVEL
                  name: aaos-dev
            - name: ELASTIC_APM_SERVER_URL
              valueFrom:
                secretKeyRef:
                  key: ELASTIC_APM_SERVER_URL
                  name: aaos-dev
            - name: ELASTIC_APM_SERVICE_NAME
              valueFrom:
                configMapKeyRef:
                  key: ELASTIC_APM_SERVICE_NAME
                  name: aaos-dev
            - name: ELASTIC_APM_VERIFY_SERVER_CERT
              valueFrom:
                configMapKeyRef:
                  key: ELASTIC_APM_VERIFY_SERVER_CERT
                  name: aaos-dev
            - name: ENCRYPTION_KEY
              valueFrom:
                secretKeyRef:
                  key: ENCRYPTION_KEY
                  name: aaos-dev
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: aaos-dev
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: aaos-dev
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: aaos-dev
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: SECRET_KEY
                  name: aaos-dev
            - name: SQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: SQL_DATABASE
                  name: aaos-dev
            - name: SQL_ENGINE
              valueFrom:
                configMapKeyRef:
                  key: SQL_ENGINE
                  name: aaos-dev
            - name: SQL_HOST
              valueFrom:
                configMapKeyRef:
                  key: SQL_HOST
                  name: aaos-dev
            - name: SQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: SQL_PASSWORD
                  name: aaos-dev
            - name: SQL_PORT
              valueFrom:
                configMapKeyRef:
                  key: SQL_PORT
                  name: aaos-dev
            - name: SQL_USER
              valueFrom:
                configMapKeyRef:
                  key: SQL_USER
                  name: aaos-dev
          image: postgres:14-alpine
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: pv-db-data
status: {}
