kubernetes/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: monitor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: monitor
    spec:
      containers:
        - args:
            - celery
            - -A
            - api
            - flower
            - --port=5555
          image: cer1dev.azurecr.io/aaos:dev
          name: monitor
          ports:
            - containerPort: 5555
          resources: {}
      imagePullSecrets: 
        - name: cer1dev-secret 
      restartPolicy: Always
status: {}
