kubernetes/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: scheduler
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scheduler
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: scheduler
    spec:
      containers:
        - args:
            - celery
            - -A
            - api
            - beat
            - --loglevel=info
            - --scheduler
            - django_celery_beat.schedulers:DatabaseScheduler
          image: cer1dev.azurecr.io/aaos:dev
          name: scheduler
          resources: {}
      imagePullSecrets: 
        - name: cer1dev-secret 
      restartPolicy: Always
status: {}
