kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aaos-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://aaos.ceruno.cloud"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - aaos.ceruno.cloud
    secretName: aaos-certificate
  rules:
    - host: aaos.ceruno.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port: 
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: web
                port: 
                  number: 80
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: web
                port: 
                  number: 80
